syntax="proto3";
package rpc;

// Response to the client, when it asks for the MerkleRoot of the directory
message MerkleRootResponse {
    string nodeAddress = 1;
    bool isValid = 2;
}

// Request made by client for getting the MerkleRoot of a node
message MerkleRootRequest {
    // int32 getProof = 1;
    int32 leafIdx = 1;   
    // repeated Proof proof = 1;
    // repeated Proof proof = 1;
    // int32 ValidateLeaf = 2; 
    bytes leaf = 2;
}

message Proof {
    map<string, bytes> proof = 1;
}

service GetMerkleRoot {
	rpc CalculateMerkleRoot(MerkleRootRequest) returns (MerkleRootResponse);
}
